--- a/Tests/Tests.fsproj
+++ b/Tests/Tests.fsproj
@@ -85,6 +85,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <ProjectReference Include="..\Library\Library.fsproj">
       <Name>Library</Name>
